docs: expand ARCHITECTURE.md with new sections on memory, fatigue, debt, and category management
- Introduced detailed explanations of the memory system, including food, category, and family memories, and their impact on nutritional efficiency.
- Added descriptions of fatigue mechanics and how they affect nutrient gains based on food repetition.
- Explained nutritional debt and its role in encouraging dietary variety by penalizing over-reliance on specific food categories.
- Defined neglected categories and fatigued families to enhance understanding of dietary balance and management.
- Updated the registry lifecycle documentation to clarify the processes for loading and reloading configurations.